# inocli

./: .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/ino_scrapper/: config.py  main.py
src/inocli/: __init__.py  client.py  configs.py  schemas.py
src/inoscrap/: client.py  config.py  main.py
tests/: test_installation.py
