[project]
name = ""
version = ""
description = ""
authors = [
    {name = "aryadovoy", email = "ryav.omsk@gmail.com"},
]
dependencies = [
    "pydantic-settings>=2.1.0",
    "aiohttp>=3.9.1",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.dev-dependencies]
dev = [
    "ruff>=0.1.6",
    "black>=23.11.0",
    "pre-commit>=3.5.0",
    "ipykernel>=6.27.1",
]

[tool.pdm.build]
package-dir = "src"

[tool.pdm.scripts]
_.env_file.override = ".env"
tests = "python -m pytest tests/"

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "src"

[tool.ruff]
src = ["src", "tests", "scripts"]
select = ["E", "F", "I", "SIM", "ARG", "T20", "Q", "N", "ANN", "RET", "PT", "C4", "C90"]
ignore = ["ANN101", "ANN102", "ANN002", "ANN003"]
extend-exclude = [".venv", "alembic", "pyproject.toml"]
unfixable = ["T20", "E711", "E712"]

[tool.black]
line-length = 79
force-exclude = "(alembic|.venv)/"

[tool.mypy]
pretty = true
ignore_missing_imports = true
explicit_package_bases = true
namespace_packages = true
