[project]
name = "inocli"
version = "0.1.0"
description = "Unofficial Inoreader client"
authors = [
    {name = "aryadovoy", email = "ryav.omsk@gmail.com"},
]
dependencies = [
    "pydantic-settings>=2.0.0",
    "aiohttp>=3.0.0",
    "pydantic[email]>=2.0.0",
    "typing-extensions>=4.5.0; python_version < '3.11'",
]
requires-python = ">=3.10"
readme = "README.md"
license = {text = "MIT"}

[dependency-groups]
dev = [
    "ruff>=0.12.4",
    "pre-commit>=4.2.0",
    "ipykernel>=6.29.5",
    "pyright>=1.1.403",
    "commitizen>=4.8.3",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
pythonpath = "src"

[tool.ruff]
target-version = "py313"
src = ["src", "tests"]
line-length = 79

[tool.ruff.lint]
select = [
    "E",        # pycodestyle errors
    "F",        # pyflakes errors (unused imports, variables, etc.)
    "I",        # isort import sorting
    "SIM",      # flake8-simplify
    "ARG",      # flake8-unused-arguments
    "T20",      # flake8-print (print statements)
    "Q",        # flake8-quotes
    "N",        # pep8-naming
    "ANN",      # flake8-annotations
    "RET",      # flake8-return
    "PT",       # flake8-pytest-style
    "C4",       # flake8-comprehensions
    "C90",      # mccabe complexity
]
unfixable = [
    "T20",      # flake8-print (print statements)
    "E711",     # comparison to None should be 'if cond is None:'
    "E712",     # comparison to True/False should be 'if cond is True:'
]
ignore = [
    "ANN002",   # type annotation for *args
    "ANN003",   # type annotation for **kwargs
    "PT003",    # pytest fixtures scope
]

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version_provider = "pep621"
update_changelog_on_bump = true
major_version_zero = true
version_files = [
    "src/inocli/__init__.py",
    "pyproject.toml:version"
]
